--- a/LCIO/02.16.01/PATCHED/CMakeLists.txt
+++ b/LCIO/02.16.01/PATCHED/CMakeLists.txt
@@ -147,7 +147,7 @@ IF( NOT EXISTS ${LCIO_ENV_INIT} )
 #!/usr/bin/env bash
 
 export LCIO=${PROJECT_SOURCE_DIR}
-export LD_LIBRARY_PATH=${PROJECT_BINARY_DIR}/lib:$LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}:$LD_LIBRARY_PATH
 export PYTHONPATH=${PROJECT_SOURCE_DIR}/src/python:$PYTHONPATH
 export JDK_HOME=${JAVA_HOME}
 export JAVA_HOME=${JAVA_HOME}
