--- a/YODA/1.9.0/PATCHED/pyext/Makefile.am
+++ b/YODA/1.9.0/PATCHED/pyext/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = yoda
 EXTRA_DIST = yoda1/__init__.py
 
 if ENABLE_PYEXT
-PYEXT_ENV = CC="$(CXX)" CXX="$(CXX)" CXXFLAGS="$(PYEXT_CXXFLAGS)" ARCHFLAGS=""  PYTHONPATH="$(YODA_PYTHONPATH):$(PYTHONPATH)"
+PYEXT_ENV = CC="$(CXX)" CXX="$(CXX)" CXXFLAGS="$(PYEXT_CXXFLAGS)" ARCHFLAGS=""  PYTHONPATH="$(YODA_PYTHONPATH):$(DESTDIR)$(YODA_PYTHONPATH):$(PYTHONPATH)"
 
 if ENABLE_ROOT
   PYEXT_ENV += BUILD_ROOTCOMPAT="yes"
