--- a/Herwig/7.2.2/PATCHED/MatrixElement/Matchbox/External/MadGraph/mg2herwig.in
+++ b/Herwig/7.2.2/PATCHED/MatrixElement/Matchbox/External/MadGraph/mg2herwig.in
@@ -1,4 +1,4 @@
-#! /usr/bin/env python
+#! /usr/bin/python3
 
 import os,sys,glob,errno,shutil,time,fnmatch,tempfile
 from optparse import OptionParser
