--- a/LoopTools/2.16/PATCHED/makefile.in
+++ b/LoopTools/2.16/PATCHED/makefile.in
@@ -7,17 +7,23 @@ BINDIR = $(PREFIX)/bin
 LIB = libooptools$(QUADSUFFIX).a
 FE = lt$(QUADSUFFIX)$(EXE)
 MFE = LoopTools$(QUADSUFFIX)$(EXE)
+FCC = fcc$(QUADSUFFIX)
+FXX = f++$(QUADSUFFIX)
 INCLUDE = $(BLD)/looptools.h $(BLD)/clooptools.h
 
 ARGS = $(PARALLEL) \
   LIB="$(LIB)" \
   FE="$(FE)" \
   MFE="$(MFE)" \
+  FCC="$(FCC)" \
+  FXX="$(FXX)" \
   EXE="$(EXE)" \
   DEF="$(DEF)" \
   NOUNDERSCORE="$(NOUNDERSCORE)" \
   XFC="$(FC) $(FFLAGS) -I." \
   F90="$(F90)" \
+  CDEFS="$(CDEFS)" \
+  MCDEFS="$(MCDEFS)" \
   CC="$(CC)" \
   CFLAGS="$(CFLAGS)" \
   CXX="$(CXX)" \
@@ -43,9 +49,9 @@ install: lib frontend
 	cp -p $(BLD)/$(LIB) $(DESTDIR)$(LIBDIR)
 	cp -p $(INCLUDE) $(DESTDIR)$(INCLUDEDIR)
 	strip $(BLD)/$(FE)
-	cp -p $(BLD)/fcc $(BLD)/$(FE) $(DESTDIR)$(BINDIR)
-	rm -f $(DESTDIR)$(BINDIR)/f++
-	ln -s fcc $(DESTDIR)$(BINDIR)/f++
+	cp -p $(BLD)/$(FCC) $(BLD)/$(FE) $(DESTDIR)$(BINDIR)
+	rm -f $(DESTDIR)$(BINDIR)/$(FXX)
+	ln -s $(FCC) $(DESTDIR)$(BINDIR)/$(FXX)
 	test ! -f $(BLD)/$(MFE) || { \
 	  test -z "$(EXE)" || ldd $(BLD)/$(MFE) | awk '/\/usr\/bin\/cyg/ { system("cp -p " $$3 " $(DESTDIR)$(BINDIR)/"); }' ; \
 	  strip $(BLD)/$(MFE) ; \
