MCFM and Whizard

--- a/MCFM/10.2.1/PATCHED/CMakeLists.txt
+++ b/MCFM/10.2.1/PATCHED/CMakeLists.txt
@@ -329,7 +329,7 @@ set(CMAKE_INSTALL_RPATH "${CMAKE_BINARY_DIR}/local/lib")
 
 ## Installation
 
-install(TARGETS mcfm DESTINATION "${CMAKE_BINARY_DIR}")
+install(TARGETS mcfm DESTINATION ${CMAKE_INSTALL_BINDIR})
 install(FILES "${CMAKE_SOURCE_DIR}/Bin/process.DAT" DESTINATION "${CMAKE_BINARY_DIR}")
 install(FILES "${CMAKE_SOURCE_DIR}/Bin/br.sm1" DESTINATION "${CMAKE_BINARY_DIR}")
 install(FILES "${CMAKE_SOURCE_DIR}/Bin/br.sm2" DESTINATION "${CMAKE_BINARY_DIR}")
