--- a/SHERPA-MC/2.2.12/PATCHED/AddOns/Python/Makefile.am
+++ b/SHERPA-MC/2.2.12/PATCHED/AddOns/Python/Makefile.am
@@ -12,12 +12,12 @@ noinst_HEADERS = \
 if ENABLE_PYEXT
 
 Sherpa_wrap.cxx: $(noinst_HEADERS)
-	@$(SWIG) -c++ -python -I$(top_srcdir) $<
+	@$(SWIG) -c++ -python -I$(top_srcdir) -I$(top_srcdir)/../ $<
 
 python_LTLIBRARIES = _Sherpa.la
 
 nodist__Sherpa_la_SOURCES = Sherpa_wrap.cxx
-_Sherpa_la_CPPFLAGS= @PYTHON_CPPFLAGS@
+_Sherpa_la_CPPFLAGS= @PYTHON_CPPFLAGS@  -I$(top_srcdir) -I$(top_srcdir)/../
 _Sherpa_la_LDFLAGS = -module
 _Sherpa_la_LIBADD  = -L@SHERPABUILDDIR@/Main -lSherpaMain -lMEProcess\
 		$(HZTOOLLIBS) $(PGSLIBS) @ATOOLSLIBS@
