--- a/MCFM/10.2.1/PATCHED/CMakeLists.txt
+++ b/MCFM/10.2.1/PATCHED/CMakeLists.txt
@@ -333,6 +333,7 @@ install(TARGETS mcfm DESTINATION ${CMAKE_INSTALL_BINDIR})
 install(FILES "${CMAKE_SOURCE_DIR}/Bin/process.DAT" DESTINATION ${CMAKE_INSTALL_BINDIR})
 install(FILES "${CMAKE_SOURCE_DIR}/Bin/br.sm1" DESTINATION ${CMAKE_INSTALL_BINDIR})
 install(FILES "${CMAKE_SOURCE_DIR}/Bin/br.sm2" DESTINATION ${CMAKE_INSTALL_BINDIR})
+install(DIRECTORY "${CMAKE_SOURCE_DIR}/src/Inc/MCFM" DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 if(use_internal_lhapdf)
   install(DIRECTORY "${CMAKE_SOURCE_DIR}/Bin/PDFs" DESTINATION "${CMAKE_BINARY_DIR}")
 endif()
