--- a/SHERPA-MC/2.2.13/ORIG/AddOns/Python/Makefile.in
+++ b/SHERPA-MC/2.2.13/ORIG/AddOns/Python/Makefile.in
@@ -289,8 +289,12 @@ CONDITIONAL_LHAPDFLIBS = @CONDITIONAL_LHAPDFLIBS@
 CONDITIONAL_MCFMDIR = @CONDITIONAL_MCFMDIR@
 CONDITIONAL_MCFMINCS = @CONDITIONAL_MCFMINCS@
 CONDITIONAL_MCFMLIBS = @CONDITIONAL_MCFMLIBS@
+CONDITIONAL_OPENLOOPSLDADD = @CONDITIONAL_OPENLOOPSLDADD@
+CONDITIONAL_OPENLOOPSLDFLAGS = @CONDITIONAL_OPENLOOPSLDFLAGS@
 CONDITIONAL_PGSLIBS = @CONDITIONAL_PGSLIBS@
 CONDITIONAL_RECOLAINCS = @CONDITIONAL_RECOLAINCS@
+CONDITIONAL_RECOLALDADD = @CONDITIONAL_RECOLALDADD@
+CONDITIONAL_RECOLALDFLAGS = @CONDITIONAL_RECOLALDFLAGS@
 CONDITIONAL_RIVETCPPFLAGS = @CONDITIONAL_RIVETCPPFLAGS@
 CONDITIONAL_RIVETLDADD = @CONDITIONAL_RIVETLDADD@
 CONDITIONAL_ROOTDIR = @CONDITIONAL_ROOTDIR@
@@ -331,6 +335,7 @@ FC = @FC@
 FCFLAGS = @FCFLAGS@
 FCLIBS = @FCLIBS@
 FGREP = @FGREP@
+FILECMD = @FILECMD@
 GREP = @GREP@
 HADRONSBUILDDIR = @HADRONSBUILDDIR@
 HADRONSDIR = @HADRONSDIR@
@@ -495,7 +500,7 @@ noinst_HEADERS = \
 
 @ENABLE_PYEXT_TRUE@python_LTLIBRARIES = _Sherpa.la
 @ENABLE_PYEXT_TRUE@nodist__Sherpa_la_SOURCES = Sherpa_wrap.cxx
-@ENABLE_PYEXT_TRUE@_Sherpa_la_CPPFLAGS = @PYTHON_CPPFLAGS@
+@ENABLE_PYEXT_TRUE@_Sherpa_la_CPPFLAGS = @PYTHON_CPPFLAGS@ -I$(top_srcdir)
 @ENABLE_PYEXT_TRUE@_Sherpa_la_LDFLAGS = -module
 @ENABLE_PYEXT_TRUE@_Sherpa_la_LIBADD = -L@SHERPABUILDDIR@/Main -lSherpaMain -lMEProcess\
 @ENABLE_PYEXT_TRUE@		$(HZTOOLLIBS) $(PGSLIBS) @ATOOLSLIBS@
