--- a/cernlib/2023.08.14.0/PATCHED/cernlib-2023.08.14.0-free/CMakeLists.txt
+++ b/cernlib/2023.08.14.0/PATCHED/cernlib-2023.08.14.0-free/CMakeLists.txt
@@ -538,6 +538,10 @@ set(CMAKE_STATIC_LINKER_FLAGS_${CMAKE_BUILD_TYPE}  "")
 set(CMAKE_Fortran_FLAGS_${CMAKE_BUILD_TYPE}  "")
 set(CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE}  "")
 
+list(REMOVE_ITEM CMAKE_C_FLAGS "-Werror=format-security")
+list(REMOVE_ITEM CMAKE_C_FLAGS "-Werror=implicit-function-declaration")
+list(REMOVE_ITEM CMAKE_C_FLAGS "-Werror=implicit-int")
+
 message(STATUS "CERNLIB: CMAKE_EXE_LINKER_FLAGS=${CMAKE_EXE_LINKER_FLAGS}")
 message(STATUS "CERNLIB: CMAKE_MODULE_LINKER_FLAGS=${CMAKE_MODULE_LINKER_FLAGS}")
 message(STATUS "CERNLIB: CMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}")
