--- a/cernlib/2023.10.31.0/PATCHED/cernlib-2023.10.31.0-free/CMakeLists.txt
+++ b/cernlib/2023.10.31.0/PATCHED/cernlib-2023.10.31.0-free/CMakeLists.txt
@@ -556,10 +556,6 @@ set(CMAKE_STATIC_LINKER_FLAGS_${CMAKE_BUILD_TYPE}  "")
 set(CMAKE_Fortran_FLAGS_${CMAKE_BUILD_TYPE}  "")
 set(CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE}  "")
 
-list(REMOVE_ITEM CMAKE_C_FLAGS "-Werror=format-security")
-list(REMOVE_ITEM CMAKE_C_FLAGS "-Werror=implicit-function-declaration")
-list(REMOVE_ITEM CMAKE_C_FLAGS "-Werror=implicit-int")
-
 message(STATUS "CERNLIB: CMAKE_EXE_LINKER_FLAGS=${CMAKE_EXE_LINKER_FLAGS}")
 message(STATUS "CERNLIB: CMAKE_MODULE_LINKER_FLAGS=${CMAKE_MODULE_LINKER_FLAGS}")
 message(STATUS "CERNLIB: CMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}")
@@ -576,6 +572,7 @@ include(CheckFortranCompilerFlag)
 include(CheckCCompilerFlag)
 set ( NEW_CMAKE_C_FLAGS " ")
 string(REPLACE " " ";" LIST_CMAKE_C_FLAGS "${C_C_FLAGS_TO_CHECK} ${CMAKE_C_FLAGS}")
+
 foreach(fx IN LISTS LIST_CMAKE_C_FLAGS)
   if (fx)
     check_c_compiler_flag(${fx} C_COMPILER_SUPPORTS_${fx})
@@ -589,6 +586,9 @@ IF(CMAKE_VERSION VERSION_GREATER 3.5.99)
   list(FILTER NEW_CMAKE_C_FLAGS  EXCLUDE REGEX "flto.*")
   list(FILTER NEW_CMAKE_C_FLAGS  EXCLUDE REGEX "ffat.*")
   list(FILTER NEW_CMAKE_C_FLAGS  EXCLUDE REGEX "-O3")
+  list(FILTER NEW_CMAKE_C_FLAGS  EXCLUDE REGEX "-Werror=format-security")
+  list(FILTER NEW_CMAKE_C_FLAGS  EXCLUDE REGEX "-Werror=implicit-function-declaration")
+  list(FILTER NEW_CMAKE_C_FLAGS  EXCLUDE REGEX "-Werror=implicit-int")
 #It would be nice to implement the filtering as well
 endif()
 list(JOIN NEW_CMAKE_C_FLAGS " " CMAKE_C_FLAGS_X )
