--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Install 
       run: |
-           dnf -y install 'dnf-command(copr)' 
+           dnf -y install 'dnf-command(copr)' rpmbuild
            dnf -y copr enable averbyts/HEPrpms
            sh srpmsbuild.sh HEPrpms 2023.12.30 --build
            dnf -y install HEPrpms/2023.12.30/rpmbuild/RPMS/*
