--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
       uses: actions/checkout@v3
     - name: Install 
       run: |
-           dnf -y install 'dnf-command(copr)' rpmbuild
+           dnf -y install 'dnf-command(copr)' rpmbuild which
            dnf -y copr enable averbyts/HEPrpms
+           pwd
+           ls
            sh srpmsbuild.sh HEPrpms 2023.12.30 --build
            dnf -y install HEPrpms/2023.12.30/rpmbuild/RPMS/*
