--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Install 
       run: |
-           dnf -y install 'dnf-command(copr)' rpm-build which
+           dnf -y install 'dnf-command(copr)' rpm-build which spectool git
            dnf -y copr enable averbyts/HEPrpms
            pwd
            ls
