--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
            pwd
            ls
            sh srpmsbuild.sh HEPrpms 2023.12.30 --build
-           dnf -y install HEPrpms/2023.12.30/rpmbuild/RPMS/*
+           dnf -y install HEPrpms/2023.12.30/rpmbuild/RPMS/x86_64/HEPrpms-2023.12.30-1.fc38.x86_64.rpm
