--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
            zypper --non-interactive  install rpm-build which rpmdevtools git wget
            zypper --non-interactive addrepo https://download.opensuse.org/repositories/science/openSUSE_Tumbleweed/science.repo
            wget https://copr.fedorainfracloud.org/coprs/averbyts/HEPrpmsSUSE/repo/opensuse-tumbleweed/averbyts-HEPrpmsSUSE-opensuse-tumbleweed.repo
+           sed -i 's/\$basearch/x86_64/g' averbyts-HEPrpmsSUSE-opensuse-tumbleweed.repo
            zypper --non-interactive addrepo averbyts-HEPrpmsSUSE-opensuse-tumbleweed.repo
            sh srpmsbuild.sh HEPrpms 2023.12.30 --build
            dnf -y install HEPrpms/2023.12.30/rpmbuild/RPMS/x86_64/HEPrpms-*.rpm
