--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,13 @@ jobs:
            sed -i 's/\$basearch/x86_64/g' averbyts-HEPrpmsSUSE-opensuse-tumbleweed.repo
            zypper --non-interactive addrepo averbyts-HEPrpmsSUSE-opensuse-tumbleweed.repo
            sh srpmsbuild.sh HEPrpms 2023.12.30 --build
-           zypper --non-interactive install HEPrpms/2023.12.30/rpmbuild/RPMS/x86_64/HEPrpms-*.rpm
+           zypper --non-interactive --gpg-auto-import-keys install HEPrpms/2023.12.30/rpmbuild/RPMS/x86_64/HEPrpms-*.rpm
 
   compilejobEPEL8:
     name: HEPrpms_on_EPEL8
     runs-on: ubuntu-latest
     container:
-        image: centos:centos8
+        image: gitlab-registry.cern.ch/linuxsupport/rpmci/builder-cs8
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -45,7 +45,7 @@ jobs:
     name: HEPrpms_on_EPEL9
     runs-on: ubuntu-latest
     container:
-        image: almalinux:9
+        image: gitlab-registry.cern.ch/linuxsupport/rpmci/builder-cs9
     steps:
     - name: Checkout
       uses: actions/checkout@v3
