--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   compilejobTW:
+   if: "contains(github.event.head_commit.message, 'CI')" || ${{ github.event_name == 'schedule' }}
     name: HEPrpms_on_TW
     runs-on: ubuntu-latest
     container:
@@ -26,6 +27,7 @@ jobs:
            zypper --non-interactive --no-gpg-checks  --gpg-auto-import-keys install HEPrpms/2023.12.30/rpmbuild/RPMS/x86_64/HEPrpms-*.rpm
 
   compilejobEPEL8:
+   if: "contains(github.event.head_commit.message, 'CI')" || ${{ github.event_name == 'schedule' }}
     name: HEPrpms_on_EPEL8
     runs-on: ubuntu-latest
     container:
@@ -42,6 +44,7 @@ jobs:
            dnf -y install HEPrpms/2023.12.30/rpmbuild/RPMS/x86_64/HEPrpms-*.rpm
 
   compilejobEPEL9:
+   if: "contains(github.event.head_commit.message, 'CI')" || ${{ github.event_name == 'schedule' }}  
     name: HEPrpms_on_EPEL9
     runs-on: ubuntu-latest
     container:
@@ -59,6 +62,7 @@ jobs:
 
 
   compilejobFedora38:
+   if: "contains(github.event.head_commit.message, 'CI')" || ${{ github.event_name == 'schedule' }}  
     name: HEPrpms_on_Fedora38
     runs-on: ubuntu-latest
     container:
@@ -74,6 +78,7 @@ jobs:
            dnf -y install HEPrpms/2023.12.30/rpmbuild/RPMS/x86_64/HEPrpms-*.rpm
 
   compilejobFedora39:
+   if: "contains(github.event.head_commit.message, 'CI')" || ${{ github.event_name == 'schedule' }}  
     name: HEPrpms_on_Fedora39
     runs-on: ubuntu-latest
     container:
@@ -89,6 +94,7 @@ jobs:
            dnf -y install HEPrpms/2023.12.30/rpmbuild/RPMS/x86_64/HEPrpms-*.rpm
 
   compilejobFedora40:
+   if: "contains(github.event.head_commit.message, 'CI')" || ${{ github.event_name == 'schedule' }}  
     name: HEPrpms_on_Fedora40
     runs-on: ubuntu-latest
     container:
