--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   compilejobTW:
-    if: contains(github.event.head_commit.message, 'CI') || ${{ github.event_name == 'schedule' }}
+    if: contains(github.event.head_commit.message, 'CI') == 'true' || ${{ github.event_name == 'schedule' }}
     name: HEPrpms_on_TW
     runs-on: ubuntu-latest
     container:
