--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
            zypper --non-interactive --no-gpg-checks  --gpg-auto-import-keys install HEPrpms/2023.12.30/rpmbuild/RPMS/x86_64/HEPrpms-*.rpm
 
   compilejobEPEL8:
-    if: contains(github.event.head_commit.message, 'CI') || ${{ github.event_name == 'schedule' }}
+    if: contains(github.event.head_commit.message, 'CI') == 'true'|| ${{ github.event_name == 'schedule' }}
     name: HEPrpms_on_EPEL8
     runs-on: ubuntu-latest
     container:
